fix text align for different grid sizes

--- a/scss/_rtl.scss
+++ b/scss/_rtl.scss
@@ -199,16 +199,26 @@
         }
       }
 
-      .mr#{$infix}-auto,
-      .mx#{$infix}-auto {
+      .mr#{$infix}-auto{
         margin-right: 0 !important;
         margin-left: auto !important;
       }
-      .ml#{$infix}-auto,
-      .mx#{$infix}-auto {
+      .ml#{$infix}-auto{
         margin-right: auto !important;
         margin-left: 0 !important;
       }
+      .mx#{$infix}-auto{
+        margin-right: auto !important;
+        margin-left: auto !important;
+      }
+    }
+  }
+
+  @each $breakpoint in map-keys($grid-breakpoints) {
+    @include media-breakpoint-up($breakpoint) {
+      $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+      .text#{$infix}-right   { text-align: left !important; }
+      .text#{$infix}-left  { text-align: right !important; }
     }
   }
 }
